feat: Add ButtonComponent to oxygen-ui library with styling, tests, and demo integration.

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div style="text-align: center">
   <h1>Oxygen UI Demo</h1>
   <ox-sample></ox-sample>
+  <ox-button label="Click me"></ox-button>
 </div>
 <router-outlet />
