--- a/projects/oxygen-ui/src/lib/components/button/button.component.html
+++ b/projects/oxygen-ui/src/lib/components/button/button.component.html
@@ -1,5 +1,2 @@
-<button 
-    class="oxy-button oxy-button--{{ variant() }} oxy-button--{{ size() }}"
->
-    {{ label() }}
-</button>
+<ng-content></ng-content>
+{{ label() }}
