--- a/projects/oxygen-ui/src/lib/styles/main.scss
+++ b/projects/oxygen-ui/src/lib/styles/main.scss
@@ -1,5 +1,21 @@
 @use './variables';
+@use './breakpoints';
+@use './containers';
 @use './mixins';
 @use './core';
 
 @use './fonts';
+@use './grid';
+@use './display';
+@use './sizing';
+@use './flex';
+@use './spacing';
+@use './utilities';
+@use './typography';
+@use './gutters';
+@use './colors';
+@use './effects';
+@use './position';
+@use './extras';
+@use './vertical-align';
+@use './float';
