--- a/projects/oxygen-ui/src/lib/components/button/button.component.scss
+++ b/projects/oxygen-ui/src/lib/components/button/button.component.scss
@@ -61,7 +61,7 @@
         border-color: $color !important;
         color: $color !important;
         &:hover:not(.oxy-button--disabled) {
-          background-color: rgba($color, 0.1) !important;
+          background-color: color-mix(in srgb, #{$color}, transparent 90%) !important;
         }
       }
 
@@ -70,7 +70,7 @@
         background-color: transparent !important;
         color: $color !important;
         &:hover:not(.oxy-button--disabled) {
-          background-color: rgba($color, 0.1) !important;
+          background-color: color-mix(in srgb, #{$color}, transparent 90%) !important;
         }
       }
     }
