--- a/projects/oxygen-ui/src/lib/components/accordion/accordion-item/accordion-item.component.html
+++ b/projects/oxygen-ui/src/lib/components/accordion/accordion-item/accordion-item.component.html
@@ -5,9 +5,20 @@
             [class]="headerClasses()" 
             (click)="toggle()" 
             [attr.aria-expanded]="expanded()"
-            [attr.aria-controls]="panelId()">
-      <span class="ox-accordion-item__title">{{ title() }}</span>
-      <span class="ox-accordion-item__icon" [class.ox-accordion-item__icon--rotated]="expanded()">
+            [attr.aria-controls]="panelId()"
+            [disabled]="disabled()"
+            [attr.aria-disabled]="disabled()"
+            #headerButton>
+      <span class="ox-accordion-item__title">
+        @if (customHeader()) {
+          <ng-container [ngTemplateOutlet]="customHeader()!.templateRef"></ng-container>
+        } @else {
+          {{ title() }}
+        }
+      </span>
+      <span class="ox-accordion-item__icon" 
+            [class.ox-accordion-item__icon--rotated]="expanded()"
+            aria-hidden="true">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <polyline points="6 9 12 15 18 9"></polyline>
         </svg>
